Fix credit text spacing.

--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -513,7 +513,7 @@ body {
                     color: var(--beige-3);
                     position: absolute;
                     bottom: -20%;
-                    padding: 0 5%;
+                    padding: 0;
                     text-align: center;
                     width: 100%;
                 }
